!+ cmd: start network
create network creates a directory at network filepath. copied testnetwork into example network to use for creating new networks

--- a/command_logs/0.2.0.md
+++ b/command_logs/0.2.0.md
@@ -4,7 +4,7 @@
 -- logs from 0.1.0 <= 0.2.0
 
 ## 0.2.0 CMDLINE INTERFACE
-    - set up COMMAND_CENTER and CONTROL_CENTER env vars using osext
+    - use env var to create abs path
     - generate network (Brahma)
     - start network by name (Shiva)
     - destroy network by name (Vishnu)
